--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -51,4 +51,30 @@ color: rgb(13, 19, 33)
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  gap: 20px;
+}
+.banner-img{
+margin-top: 20px;
+}
+.banner-title{
+  color: rgb(13, 19, 33);
+margin-top: 15px;
+font-size: 18px;
+font-weight: 800;
+line-height: 68px;
+letter-spacing: 0%;
+}
+.banner-desc{
+margin-top: 15px;
+color: rgb(13, 19, 33);
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+}
+.scroll-down{
+  border-radius: 8px;
+color: white;
+background: rgb(13, 19, 33);
+padding: 21px 24px 21px 24px;
 }
