--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -20,6 +20,16 @@ border-radius: 8px;
 opacity: 0.8;
 
 }
+.desc{
+  color: rgb(13, 19, 33);
+font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+}
+.text-center{
+  text-align: center;
+}
 
 
 /* nav */
@@ -72,9 +82,92 @@ font-weight: 400;
 line-height: 26px;
 letter-spacing: 0%;
 }
+/* banner button */
+
 .scroll-down{
   border-radius: 8px;
 color: white;
 background: rgb(13, 19, 33);
 padding: 21px 24px 21px 24px;
+}
+
+/* main section */
+
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+}
+.container{
+  margin-top: 75px;
+  border-radius: 16px;
+
+  background: rgba(13, 19, 33, 0.02); 
+}
+.container-title{
+  margin-top: 80px;
+  margin-bottom: 25px;
+  color: rgb(13, 19, 33);
+  font-size: 32px;
+font-weight: 800;
+line-height: 37px;
+letter-spacing: 0%;
+}
+.data-title-desc{
+ margin-bottom: 50px;
+ padding: 40px;
+ 
+}
+
+/* data design */
+.data-container-1{
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+  align-items: center;
+  border-radius: 16px;
+background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+margin: 32px 0;
+padding: 48px;
+}
+.data-container-2{
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  justify-items: center;
+  align-items: center;
+  border-radius: 16px;
+background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+margin: 32px 0px;
+padding: 48px;
+}
+.data-container-3{
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+  align-items: center;
+  border-radius: 16px;
+background: linear-gradient(270.00deg, rgb(255, 255, 255),rgba(255, 255, 255, 0) 100%);
+margin: 32px 0px;
+padding: 48px;
+}
+.data-text-container{
+  width: 477px;
+height: 219px;
+margin: 0px 20px;
+}
+.data-title{
+  color: rgba(13, 19, 33, 0.7);
+  font-size: 24px;
+font-weight: 700;
+line-height: 36px;
+letter-spacing: 0%;
+margin: 16px 0px;
+}
+.data-btn-primary{
+  color: rgb(13, 19, 33);
+  margin: 10px 10px;
+  padding: 12px 10px 12px 10px;
+  font-size: 20px;
+  letter-spacing: 0%;
+  text-align: center;
 }
