--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -171,3 +171,25 @@ margin: 16px 0px;
   letter-spacing: 0%;
   text-align: center;
 }
+.inspiration{
+  margin-top: 90px;
+}
+.inspiration-title{
+  margin-bottom: 15px;
+  color: rgb(13, 19, 33);
+  font-size: 32px;
+font-weight: 800;
+line-height: 37px;
+letter-spacing: 0%;
+}
+.video{
+  box-sizing: border-box;
+border: 1px solid rgba(13, 19, 33, 0.2);
+border-radius: 16px;
+margin: 48px 0px;
+}
+.v-size{
+  box-sizing: border-box;
+/* border: 1px solid rgba(13, 19, 33, 0.2); */
+border-radius: 16px;
+}
