--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -22,6 +22,7 @@ opacity: 0.8;
 }
 .desc{
   color: rgb(13, 19, 33);
+  margin: 24px 0px;
 font-size: 16px;
 font-weight: 400;
 line-height: 26px;
@@ -192,4 +193,56 @@ margin: 48px 0px;
   box-sizing: border-box;
 /* border: 1px solid rgba(13, 19, 33, 0.2); */
 border-radius: 16px;
+}
+/* target section */
+.target-title{
+  color: rgb(13, 19, 33);
+  margin: 24px 0px;
+  font-size: 32px;
+font-weight: 800;
+line-height: 37px;
+letter-spacing: 0%;
+}
+
+/* skill section */
+.skills{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 24px;
+  padding: 20px
+}
+.skill-1{
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 24px;
+padding: 20px;
+background-color: #FFF6F4;
+border-radius: 5px;
+}
+.skill-2{
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 24px;
+padding: 20px;
+background-color: #F2F6FE;
+border-radius: 5px;
+}
+.skill-3{
+  display: flex;
+flex-direction: column;
+justify-content: center;
+align-items: flex-start;
+gap: 24px;
+padding: 20px;
+background-color: #FFFDF3;
+border-radius: 5px;
+}
+.skills a{
+color: black;
 }
