--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -246,3 +246,58 @@ border-radius: 5px;
 .skills a{
 color: black;
 }
+/* form section */
+.form{
+  height: 313px;
+  /* border: 1px solid red; */
+  border-radius: 16px;
+  background-image: url("/assets/handshake.jpg");
+  background-size: cover;
+  padding: 64px 48px 64px 48px;
+  margin-top: 50px;
+}
+.form-title{
+  color: rgb(255, 255, 255);
+  margin: 16px 0px;
+  font-size: 32px;
+font-weight: 700;
+line-height: 36px;
+letter-spacing: 0%;
+text-align: center;
+}
+.form-desc{
+  color: rgb(255, 255, 255);
+  margin: 16px 0px;
+  font-size: 16px;
+font-weight: 400;
+line-height: 26px;
+letter-spacing: 0%;
+text-align: center;
+}
+.inbox{
+  position: static;
+width: 548px;
+height: 57px;
+  box-sizing: border-box;
+border: 1px solid rgba(13, 19, 33, 0.15);
+border-radius: 8px;
+
+background: rgb(255, 255, 255);
+padding: 19px 20px 19px 20px;
+margin: 0px 10px;
+font-size: 16px;
+font-weight: 400;
+line-height: 19px;
+letter-spacing: 0%;
+text-align: center;
+}
+.submit{
+  margin: 0px 10px;
+  padding: 17px 20px 17px 20px;
+  color: rgb(13, 19, 33);
+font-size: 20px;
+font-weight: 600;
+line-height: 23px;
+letter-spacing: 0%;
+text-align: center;
+}
