--- a/styles.css/index.css
+++ b/styles.css/index.css
@@ -301,3 +301,22 @@ line-height: 23px;
 letter-spacing: 0%;
 text-align: center;
 }
+/* footer */
+.footer{
+  display: flex;
+  justify-content: space-between;
+  justify-items: center;
+  align-items: center;
+  position: absolute;
+width: 100%;
+height: 100px;
+  border-radius: 16px;
+background: rgba(13, 19, 33, 0.03);
+margin: 30px auto;
+}
+.footer-title{
+padding: 10px 150px;
+}
+.f-img{
+  padding: 10px 30px;
+}
